feat(ai): improve finance intent fallback quality and add mode comparison scripts